--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,8 +11,8 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <title>React App</title>
+    <script src="https://kit.fontawesome.com/28656be5cc.js" crossorigin="anonymous"></script>
+    <title>SpillTheTea </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
